# opsgenie-logger

./: .gitignore  .travis.yml  LICENSE  README.md  build_docs.py  mypy.ini  pyproject.toml
.circleci/: config.yml
docs/: CHANGELOG.md  conf.py  index.md  opsgenie_logger .md
opsgenie_logger/: __init__.py
tests/: conftest.py  test_init.py
